<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_explore">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.example.zenith.ui.feed.FeedFragment"
        android:label="@string/feed_fragment_label"
        tools:layout="@layout/fragment_feed"/>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.zenith.ui.explore.ExploreFragment"
        android:label="@string/explore_fragment_label"
        tools:layout="@layout/fragment_explore"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.zenith.ui.profile.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile"/>

</navigation>