<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_gravity="top|center"
            android:layout_marginTop="2sp"
            android:backgroundTint="@color/screen_background"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="15sp"
            app:cardCornerRadius="30sp">

        <SearchView
            android:id="@+id/search_explore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search"/>

        </androidx.cardview.widget.CardView>



    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:umanoPanelHeight="80sp"
        sothree:umanoShadowHeight="4dp"
        sothree:umanoOverlay="true"
        sothree:umanoScrollableView="@+id/scroll_explore"
        app:umanoFadeColor="@android:color/transparent"
        tools:context=".ui.explore.ExploreFragment">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map_explore"
        tools:context=".ui.map.MapsFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/relative_explore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100sp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/screen_background"
        app:cardCornerRadius="20sp">

        <View
            android:layout_width="50sp"
            android:layout_height="3sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4sp"
            android:background="@android:color/black"
            android:layout_centerHorizontal="true"/>

        <ScrollView
            android:id="@+id/scroll_explore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:paddingBottom="60dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/screen_background"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/search"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    app:cornerRadius="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:strokeColor="@color/earth"
                    app:strokeWidth="2sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/continent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerContinents"
                    app:layout_constraintTop_toBottomOf="@+id/search"
                    app:layout_constraintVertical_bias="0.65"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerContinents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerCountries"
                    app:layout_constraintTop_toBottomOf="@+id/search"
                    app:layout_constraintVertical_bias="0.608"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/countries"
                    android:layout_marginTop="30sp"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerCountries"
                    app:layout_constraintEnd_toStartOf="@+id/seeAllButton"
                    app:layout_constraintHorizontal_bias="0.034"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerContinents"
                    app:layout_constraintVertical_bias="0.802" />

                <TextView
                    android:id="@+id/seeAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="30sp"
                    android:text="@string/see_all"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerCountries"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerContinents"
                    app:layout_constraintVertical_bias="0.73" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCountries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginStart="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/random_country"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/random_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40sp"
                    android:backgroundTint="@color/screen_background"
                    android:gravity="center"
                    android:text="@string/random"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:cornerRadius="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeColor="@color/earth"
                    app:strokeWidth="2sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>


</FrameLayout>